--- a/src/team503/package.xml
+++ b/src/team503/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>Team503</name>
+  <name>team503</name>
   <version>0.0.0</version>
-  <description>The Team503 package</description>
+  <description>The team503 package</description>
 
   <maintainer email="tvquocchi@gmail.com">sihc</maintainer>
 
